# Expired

./: .gitignore  Bugs To Fix.txt  README.md  TODO.txt
Expired!/: TODO.txt  local.properties
Expired!/app/: build.gradle  proguard-rules.pro
Expired!/app/src/main/: AndroidManifest.xml
Expired!/back-end/: Fridge.cpp  Fridge.java  Item.cpp  Item.java  Makefile  Pair.java  PairofDates.java  TODO.txt  database.txt  fridge.txt  test.cpp  test.java
Expired!/front-end/app/: build.gradle
Expired!/front-end/app/src/main/: AndroidManifest.xml
Expired!/front-end/app/src/main/cpp/: CMakeLists.txt  Item.cpp
Expired!/front-end/app/src/main/cpp/include/: Item.h
Expired!/gradle/wrapper/: gradle-wrapper.properties
Expired!/www/: conn.php  login.php  query.php
app/: build.gradle  google-services.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/data/: foodkeeper.json  foodstorage.json  parse.py
app/src/main/res/layout/: activity_add.xml  activity_add_date.xml  activity_add_item.xml  activity_db.xml  activity_edit_date.xml  activity_edit_item.xml  activity_main.xml  item_view_db.xml  item_view_main.xml  itemview.xml  toolbar.xml
app/src/main/res/menu/: main.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
back-end/: Fridge.h  Fridge.java  Item.java  database.txt  fridge.txt  test.java
front-end/app/: build.gradle
front-end/gradle/wrapper/: gradle-wrapper.properties
gradle/wrapper/: gradle-wrapper.properties
main/app/: build.gradle
main/app/src/main/: AndroidManifest.xml
main/app/src/main/res/menu/: main.xml
(+50 files in other folders)
